--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Awsome titel</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <ul>
+        <li>Menu1</li>
+        <li>Menu1</li>
+        <li>Menu1</li>
+      </ul>
+    </div>
+  </body>
 </html>
