--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Awsome titel</title>
+    <script src="main.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <title>Awesome menu title</title>
   </head>
   <body>
     <div>
       <ul>
-        <li>Menu1</li>
-        <li>Menu1</li>
-        <li>Menu1</li>
+        <a href="#menu1"><li>Menu1</li></a>
+        <a href="#menu1"><li>Menu2</li></a>
+        <a href="#menu1"><li>Menu3</li></a>
       </ul>
     </div>
   </body>
