--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="main.js"></script>
+    
     <link rel="stylesheet" href="style.css">
     <title>Awesome menu title</title>
   </head>
@@ -16,5 +16,10 @@
         <a href="#menu1"><li>Menu3</li></a>
       </ul>
     </div>
+    <div id="container">
+    
+    <div id="hello-container"></div>
+  </div>
+    <script src="main.js"></script>
   </body>
 </html>
