Add structure for button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <li>Menu1</li>
         <li>Menu1</li>
       </ul>
+      <p>
+        <label>
+          <button>Click me please!</button>
+        </label>
+      </p>
     </div>
   </body>
 </html>
