Add click handler
Added a `click` handler for the `first button` element.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </ul>
       <p>
         <label>
-          <button>Click me please!</button>
+          <button id="first-btn">Click me please!</button>
         </label>
       </p>
     </div>
