Adding functionality to the button
Replacing functionality of existing button to stop the HALLO attacks!

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </ul>
       <p>
         <label>
-          <button id="first-btn">Click me please!</button>
+          <button id="first-btn">Stop with salute'!</button>
         </label>
       </p>
     </div>
